--- a/resources/CMakeLists.txt
+++ b/resources/CMakeLists.txt
@@ -9,4 +9,6 @@ configure_file ("Enemy.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Eraser.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Trash.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Save.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("Hover.png" ${CMAKE_BINARY_DIR} COPYONLY)
+configure_file ("HoverErase.png" ${CMAKE_BINARY_DIR} COPYONLY)
 configure_file ("Toolbar.txt" ${CMAKE_BINARY_DIR} COPYONLY)
